Delete some duplicate keywords on bower.json

--- a/bower.json
+++ b/bower.json
@@ -13,16 +13,13 @@
     "javascript",
     "object",
     "graph",
-    "graph",
     "json",
     "fromJson",
     "toJson",
     "json",
     "parse",
-    "json",
     "stringify",
-    "object",
-    "graph"
+    "object"
   ],
   "license": "MIT",
   "ignore": [
