--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "jsog",
   "version": "0.0.1",
-  "homepage": "https://github.com/paivaric/jsog",
+  "homepage": "https://github.com/jsog/jsog",
   "authors": [
     "jeff@infohazard.org",
     "latchkey@gmail.com"
